# SETR

./: .gitignore  d_l_test.py  display_test_host  main.py  mic_test.c  mic_test_CMakeLists.txt
freertos/: AUDIO_SPORADIC_SERVER.md  CHOOSE_ANALYSIS_METHOD.md  CMakeLists.txt  CRITICAL_INSTANT_TEST_GUIDE.md  FreeRTOSConfig.h  MEASUREMENT_METHODOLOGY.md  MEASUREMENT_SIMPLE_EXPLANATION.txt  PRESENTATION_SLIDES.md  QUICK_RESULTS_SUMMARY.txt  README.md  SWITCH_TO_SUMMARY.sh  TIMING_ANALYSIS_REPORT.md  TRACE_BUFFER_ACCESS.md  main.c  pcd8544.c  pcd8544.h  tetris_logic.c  tetris_logic.h
freertos/board/: board_init.c  board_init.h
freertos/config/: project_config.h
freertos/drivers/: lsm9ds0_accel.c  lsm9ds0_accel.h
freertos/drivers/lsm/: lsm9ds0_accel.c
freertos/include/: FreeRTOSConfig.h  board.h  board_init.h  critical_instant_test.h  display.c  display.h  game_state.h  lsm9ds0_accel.h  numbers.h  pcd8544.h  project_config.h  square.h  task_trace.h  tasks.h
freertos/pcd8544/: pcd8544.c
freertos/src/: analysis_task.c  audio_task.c  board_init.c  critical_instant_test.c  display.c  display_task.c  game_state.c  input_task.c  lsm9ds0_accel.c  main.c  pcd8544.c  task_trace.c  tetris_logic.c  update_task.c
freertos/state/: game_state.c  game_state.h
freertos/tasks/: display_task.c  input_task.c  update_task.c
freertos/tetris_display/: display.h  display_test_host.c
tetris_logic/: game_state.py  kick_tables.py  main.py  piece_data.py  poll_inputs.py  render_game.py  renderer.py  tetris_logic.py
